# OpenScience

./: .gitignore  .readthedocs.yml  CITATION.cff  Dockerfile  Papers.txt  README.md  codemeta.json  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml  python-app.yml
docs/: index.md
src/: grobid.py  main.py  paper_download.py  utils.py
tests/: test_grobid.py  test_utils.py
